added swagger ui and mongodb uri

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=Medinexus
+spring.data.mongodb.uri=mongodb+srv://arunakariyawasam27862:MJqkeDurUv99hPMB@cluster0.5eyaa.mongodb.net/DoctorDB?retryWrites=true&w=majority
