--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,10 @@
       		<groupId>org.springframework.boot</groupId>
       		<artifactId>spring-boot-starter-data-mongodb</artifactId>
     	</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -92,6 +96,11 @@
       		<artifactId>spring-security-test</artifactId>
       		<scope>test</scope>
     	</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
